---
source: src/rules/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    BadQuotesDocstring:
      quote: double
  location:
    row: 1
    column: 0
  end_location:
    row: 3
    column: 3
  fix:
    content:
      - "\"\"\""
      - Single quotes multiline module docstring
      - "\"\"\""
    location:
      row: 1
      column: 0
    end_location:
      row: 3
      column: 3
  parent: ~
- kind:
    BadQuotesDocstring:
      quote: double
  location:
    row: 14
    column: 4
  end_location:
    row: 16
    column: 7
  fix:
    content:
      - "\"\"\""
      - "    Single quotes multiline class docstring"
      - "    \"\"\""
    location:
      row: 14
      column: 4
    end_location:
      row: 16
      column: 7
  parent: ~
- kind:
    BadQuotesDocstring:
      quote: double
  location:
    row: 26
    column: 8
  end_location:
    row: 28
    column: 11
  fix:
    content:
      - "\"\"\""
      - "        Single quotes multiline function docstring"
      - "        \"\"\""
    location:
      row: 26
      column: 8
    end_location:
      row: 28
      column: 11
  parent: ~

